// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu-button > passes through additional html attributes 1`] = `
<span
  class="menu-button class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="menu-button__button btn btn--secondary"
    data-ebayui=""
    type="button"
  >
    <!--F#7-->
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
      focusable="false"
    >
      <defs>
        <symbol
          id="icon-chevron-down-12"
          viewBox="0 0 12 12"
        >
          <path
            clip-rule="evenodd"
            d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
            fill-rule="evenodd"
          />
        </symbol>
      </defs>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
    <!--F/-->
  </button>
  <span
    class="menu-button__menu"
    tabindex="-1"
  >
    <div
      class="menu-button__items"
      id="s0-@content-menu"
      role="menu"
    >
      <div
        class="menu-button__item"
        role="menuitem"
      >
        <span>
          <!--F#3[0]-->
          item 1 that has very long text
          <!--F/-->
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <defs>
            <symbol
              id="icon-tick-16"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
          </defs>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu-button__item"
        role="menuitem"
      >
        <span>
          <!--F#3[1]-->
          item 2
          <!--F/-->
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu-button__item"
        role="menuitem"
      >
        <span>
          <!--F#3[2]-->
          item 3
          <!--F/-->
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</span>
`;

exports[`menu-button > passes through additional html attributes 2`] = `
<span
  class="menu-button class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="menu-button__button btn btn--secondary"
    data-ebayui=""
    type="button"
  >
    <!--F#7-->
    <span>
      eBay Menu
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--12"
      focusable="false"
    >
      <defs>
        <symbol
          id="icon-chevron-down-12"
          viewBox="0 0 12 12"
        >
          <path
            clip-rule="evenodd"
            d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
            fill-rule="evenodd"
          />
        </symbol>
      </defs>
      <use
        href="#icon-chevron-down-12"
      />
    </svg>
    <!--F/-->
  </button>
  <span
    class="menu-button__menu"
    tabindex="-1"
  >
    <div
      class="menu-button__items"
      id="s0-@content-menu"
      role="menu"
    >
      <div
        class="menu-button__item"
        role="menuitem"
      >
        <span>
          <!--F#3[0]-->
          item 1 that has very long text
          <!--F/-->
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <defs>
            <symbol
              id="icon-tick-16"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                fill-rule="evenodd"
              />
            </symbol>
          </defs>
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu-button__item"
        role="menuitem"
      >
        <span>
          <!--F#3[1]-->
          item 2
          <!--F/-->
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        class="menu-button__item"
        role="menuitem"
      >
        <span>
          <!--F#3[2]-->
          item 3
          <!--F/-->
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <use
            href="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </span>
</span>
`;

exports[`menu-button > passes through additional html attributes from child items 1`] = `
<div
  class="menu-button__item class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="menuitem"
  style="color:red"
  type="number"
>
  <span />
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-tick-16"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-tick-16"
    />
  </svg>
</div>
`;

exports[`menu-button > passes through additional html attributes from child items 2`] = `
<div
  class="menu-button__item class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="menuitem"
  style="color:red"
  type="number"
>
  <span />
  <svg
    aria-hidden="true"
    class="icon icon--16"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-tick-16"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-tick-16"
    />
  </svg>
</div>
`;

exports[`menu-button > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with a badge 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-label[39m=[32m"1 item unread"[39m
          [33mclass[39m=[32m"menu-button__item menu-button__item--badged"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
            [36m<span[39m
              [33mclass[39m=[32m"badge"[39m
            [36m>[39m
              [0m1[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-label[39m=[32m"99 items unread"[39m
          [33mclass[39m=[32m"menu-button__item menu-button__item--badged"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
            [36m<span[39m
              [33mclass[39m=[32m"badge"[39m
            [36m>[39m
              [0m99[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-label[39m=[32m"10 item unread"[39m
          [33mclass[39m=[32m"menu-button__item menu-button__item--badged"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
            [36m<span[39m
              [33mclass[39m=[32m"badge"[39m
            [36m>[39m
              [0m10[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with borderless=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--borderless"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with button variant 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0mButton[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with disabled state 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mdisabled[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with fix-width=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu menu-button__menu--fix-width"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--24"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-settings-24"[39m
            [33mviewBox[39m=[32m"0 0 24 24"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M9.763 0h4.473a.98.98 0 0 1 .93.687l.695 2.132c.267.116.528.245.782.384l2.061-.773a.969.969 0 0 1 .338-.062c.292 0 .576.135.767.379l2.788 3.579c.264.337.287.809.057 1.173l-1.202 1.895c.076.28.14.563.192.851l1.885 1.173c.36.224.54.66.447 1.08l-.995 4.464a.989.989 0 0 1-.862.777l-2.197.22a10.09 10.09 0 0 1-.531.681l.28 2.242a1.01 1.01 0 0 1-.548 1.032l-4.028 1.987a.969.969 0 0 1-1.13-.205l-1.54-1.624c-.059.002-.116.006-.174.01a3.61 3.61 0 0 1-.25.011c-.086 0-.17-.006-.252-.011-.058-.004-.115-.008-.172-.01l-1.54 1.625a.97.97 0 0 1-1.13.205l-4.03-1.987c-.38-.187-.6-.602-.547-1.031l.28-2.243a10.103 10.103 0 0 1-.531-.68l-2.199-.22a.991.991 0 0 1-.86-.777l-.995-4.462A1.013 1.013 0 0 1 .47 11.42l1.885-1.173c.05-.29.117-.572.191-.852L1.344 7.5a1.023 1.023 0 0 1 .057-1.173l2.789-3.58a.97.97 0 0 1 1.104-.317l2.06.773a10 10 0 0 1 .785-.385L8.833.687A.982.982 0 0 1 9.763 0Zm4.256 3.462L13.544 2h-3.088l-.474 1.462c-.18.55-.58.996-1.1 1.225-.217.096-.43.201-.632.312a1.948 1.948 0 0 1-1.621.119l-1.41-.53-1.925 2.474.824 1.305c.308.485.398 1.083.25 1.642a7.991 7.991 0 0 0-.156.69 2.033 2.033 0 0 1-.92 1.372L2 12.876l.686 3.088 1.51.15a1.967 1.967 0 0 1 1.408.825c.143.2.284.382.428.552.372.437.543 1.017.472 1.592l-.191 1.543L9.094 22l1.058-1.12a1.956 1.956 0 0 1 1.422-.615h.854c.534 0 1.047.22 1.422.616l1.058 1.118 2.782-1.374-.192-1.543a2.061 2.061 0 0 1 .471-1.592c.145-.17.285-.351.428-.552a1.969 1.969 0 0 1 1.408-.824l1.51-.153.685-3.087-1.292-.804a2.035 2.035 0 0 1-.92-1.373 8.335 8.335 0 0 0-.154-.689 2.07 2.07 0 0 1 .248-1.643l.824-1.304-1.925-2.475-1.41.53a1.931 1.931 0 0 1-1.622-.118 7.794 7.794 0 0 0-.631-.311 2.014 2.014 0 0 1-1.099-1.225ZM7 12a5 5 0 0 1 5-5 5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5Zm8 0c0-1.654-1.346-3-3-3s-3 1.346-3 3 1.346 3 3 3 3-1.346 3-3Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-settings-24"[39m
        [36m/>[39m
      [36m</svg>[39m
      [36m<span>[39m
        [0mSettings[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with overflow variant 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button icon-btn"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--16"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-overflow-vertical-16"[39m
            [33mviewBox[39m=[32m"0 0 16 16"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"M8 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-overflow-vertical-16"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu menu-button__menu--reverse"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with prefix label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button-prefix-label"[39m
      [36m>[39m
        [0mSort By:[0m
      [36m</span>[39m
      [0mColor[0m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"true"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemradio"[39m
        [36m>[39m
          [36m<span>[39m
            [0mColor[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemradio"[39m
        [36m>[39m
          [36m<span>[39m
            [0mYear[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemradio"[39m
        [36m>[39m
          [36m<span>[39m
            [0mMileage[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with reverse=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu menu-button__menu--reverse"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with separators 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu separator[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<hr[39m
          [33mclass[39m=[32m"menu-button__separator"[39m
          [33mrole[39m=[32m"separator"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 4[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<hr[39m
          [33mclass[39m=[32m"menu-button__separator"[39m
          [33mrole[39m=[32m"separator"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 5[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 6[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with size=small 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--small btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with type=checkbox and checked=false 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span />[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with type=checkbox and checked=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"true"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span />[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with type=radio and checked=false 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemradio"[39m
        [36m>[39m
          [36m<span />[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with type=radio and checked=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"true"[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitemradio"[39m
        [36m>[39m
          [36m<span />[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders with typeahead 1`] = `
"[36m<DocumentFragment>[39m
  [36m<p>[39m
    [0mClick the button, then type a name to see focus change. The search will see if any names start with the input, then if there are no matches it will search for the input string anywhere in the names. [0m
  [36m</p>[39m
  [36m<p>[39m
    [0mWait 2 seconds for the typeahead to reset and then try typing again to reset the search.[0m
  [36m</p>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0mButton[0m
      [36m</span>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-2-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mAusten[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mAustin[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJack[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJackman[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJackson[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJasper[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJulia[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJulio[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mJulius[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mLuca[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mLucais[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mLucan[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mLucian[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [36m<span>[39m
              [0mLucius[0m
            [36m</span>[39m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
  [36m<p />[39m
[36m</DocumentFragment>[39m"
`;

exports[`menu-button > renders without toggle icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33mclass[39m=[32m"menu-button__button btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span>[39m
        [0meBay Menu[0m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"menu-button__menu"[39m
      [33mtabindex[39m=[32m"-1"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"menu-button__items"[39m
        [33mid[39m=[32m"s0-@content-menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 1 that has very long text[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-tick-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33mclip-rule[39m=[32m"evenodd"[39m
                  [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                  [33mfill-rule[39m=[32m"evenodd"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 2[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"menu-button__item"[39m
          [33mrole[39m=[32m"menuitem"[39m
        [36m>[39m
          [36m<span>[39m
            [0mitem 3[0m
          [36m</span>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-tick-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;
